# basemaster

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _gen_icon.ps1  build-app.bat  dev.bat  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: connection.rs  driver.rs  error.rs  lib.rs  schema.rs  value.rs
crates/driver-mysql/: Cargo.toml
crates/driver-mysql/src/: lib.rs  value_decode.rs
crates/driver-postgres/: Cargo.toml
crates/driver-postgres/src/: lib.rs  value_decode.rs
crates/driver-sqlite/: Cargo.toml
crates/driver-sqlite/src/: lib.rs
crates/store/: Cargo.toml
crates/store/migrations/: 20260417120000_init.sql  20260418000000_saved_queries.sql  20260419000000_query_history.sql  20260420000000_connection_folders.sql  20260421000000_connection_sort_order.sql  20260424120000_http_proxy.sql  20260424130000_ssh_jump_hosts.sql
crates/store/src/: connection_folders.rs  connections.rs  lib.rs  query_history.rs  saved_queries.rs  secrets.rs
docs/: RELEASE.md
site/: index.html
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  conn_portability.rs  data_transfer.rs  docker_discovery.rs  http_proxy_tunnel.rs  lib.rs  main.rs  mcp_server.rs  sql_dump.rs  sql_import.rs  sql_translate.rs  ssh_known_hosts.rs  ssh_tunnel.rs  state.rs
src/components/: ai-approval-dialog.tsx  app-dialog.tsx  command-palette.tsx  conn-form.tsx  create-table-dialog.tsx  dangerous-query-dialog.tsx  data-import-view.tsx  data-transfer-wizard.tsx  destructive-confirm-dialog.tsx  docker-discover-dialog.tsx  export-dialog.tsx  global-export-dialog.tsx  new-table-view.tsx  process-list-view.tsx  query-history-view.tsx  saved-queries-list-view.tsx  settings-view.tsx  shortcut-bindings.tsx  shortcuts-cheatsheet.tsx  shortcuts-panel.tsx  sql-dump-view.tsx  sql-import-view.tsx  ssh-host-key-dialog.tsx  tab-error-boundary.tsx  tables-list-view.tsx  update-dialog.tsx  users-view.tsx  welcome.tsx
src/components/data-transfer/: options-step.tsx  persisted-options.ts  progress-step.tsx
src/components/grid/: search-bar.tsx
src/components/layout/: ai-sidebar.tsx  conn-tree.tsx  sidebar-search-results.tsx  sidebar.tsx  status-bar.tsx  tab-bar.tsx
src/components/query/: cell-types.ts  explain-view.tsx  query-editor.tsx  query-tab.tsx  result-grid.tsx
src/components/table/: filter-bar.tsx  record-form-view.tsx  structure-pane.tsx  table-view.tsx
src/components/ui/: combobox.tsx  db-icon.tsx  highlight-text.tsx  markdown.tsx  password-input.tsx
src/hooks/: use-context-menu.tsx  use-theme.ts
src/i18n/: de.ts  en.ts  es.ts  fr.ts  ja.ts  pt-br.ts  ru.ts  zh-CN.ts
src/lib/: ai-context.ts  auto-map.ts  browser-defaults.ts  column-types.ts  dangerous-query.ts  data-import.ts  dsn.ts  export-table.ts  export.ts  format-number.ts  format-value.ts  invoke.ts  ipc.ts  maintenance-sql.ts  sentry.ts  sql-format.ts  table-clipboard.ts  types.ts  use-grid-search.ts
src/lib/ai/: catalog.ts  providers.ts  runner.ts  tools.ts
src/lib/shortcuts/: match.ts  registry.ts  types.ts  use-shortcuts.ts
src/lib/theme/: presets.ts
src/state/: active-info.ts  ai-agent.ts  ai-approval.ts  app-dialog.ts  connections.ts  create-table-state.ts  dangerous-query.ts  destructive-confirm.ts  docker-discover.ts  export-state.ts  i18n.ts  query-tab-bridge.ts  saved-queries.ts  schema-cache.ts  shortcuts.ts  sidebar-filter.ts  sidebar-multi-select.ts  sidebar-selection.ts  tab-state.ts  table-draft.ts  table-view-bridge.ts  tabs.ts  theme.ts  ui-zoom.ts  updater.ts
