[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/core",
    "crates/driver-mysql",
    "crates/driver-postgres",
    "crates/driver-sqlite",
    "crates/store",
]

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["BaseMaster"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Base sqlx — cada crate (store / driver-*) habilita seu driver.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "json",
    "rust_decimal",
    "uuid",
    "macros",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
