[package]
name = "basemaster-driver-mysql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
basemaster-core = { path = "../core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["mysql"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
