[package]
name = "basemaster-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
basemaster-core = { path = "../core" }
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "migrate"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
